// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Module Module component 1`] = `
<div
  className="component obojobo-draft--modules--module"
  data-focussed={false}
  data-id="0f80bd67-e291-45bd-b612-5d66a8157a38"
  data-obo-component={true}
  data-type="ObojoboDraft.Modules.Module"
  id="obo-0f80bd67-e291-45bd-b612-5d66a8157a38"
>
  <div />
</div>
`;

exports[`Module Module component with child 1`] = `
<div
  className="component obojobo-draft--modules--module"
  data-focussed={false}
  data-id="0f80bd67-e291-45bd-b612-5d66a8157a38"
  data-obo-component={true}
  data-type="ObojoboDraft.Modules.Module"
  id="obo-0f80bd67-e291-45bd-b612-5d66a8157a38"
>
  <div>
    <MockComponent
      model={
        Object {
          "getComponentClass": [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "isThrow": false,
                "value": "MockComponent",
              },
            ],
          },
        }
      }
      moduleData={
        Object {
          "focusState": Object {},
          "navState": Object {},
        }
      }
    />
  </div>
</div>
`;
